# Zigbee-EnvMonitor

./: .gitignore  CLAUDE.md  ESP8266调试记录.md  README.md  SmartRF04EB排错指南.md  wifi_receiver.py
.claude/: settings.local.json
Projects/zstack/Utilities/SerialApp/CC2530DB/: SerialApp.ewp
Projects/zstack/Utilities/SerialApp/CC2530DB/CoordinatorEB-Pro/Exe/: Coordinator.hex  SerialApp.d51
Projects/zstack/Utilities/SerialApp/CC2530DB/EndDeviceEB-Pro/Exe/: EndDevice4.hex  SerialApp.d51
Projects/zstack/Utilities/SerialApp/Source/: DHT11.c  DHT11.h  SerialApp.c  SerialApp.h  esp8266.c  esp8266.h
bluetooth_speaker/: README.md
bluetooth_speaker/audio_processor/: audio_processor.ino
bluetooth_speaker/display_unit/: display_unit.ino
bluetooth_speaker/display_unit_enhanced/: display_unit_enhanced.ino
bluetooth_speaker/docs/: test_notes.txt
bluetooth_speaker/wiring/: 接线.xlsx
sjk/: 技术文档.md
sjk/upper_computer/: CMakeLists.txt
sjk/upper_computer/src/: chartview.cpp  chartview.h  dashboard.cpp  dashboard.h  databridgeserver.cpp  databridgeserver.h  dataparser.cpp  dataparser.h  datastore.cpp  datastore.h  devicepanel.cpp  devicepanel.h  main.cpp  mainwindow.cpp  mainwindow.h  tcpclient.cpp  tcpclient.h
sjk/web/: index.html  server.py
